@@ -270,6 +270,11 @@ version_check automake AUTOMAKE "$automake_progs" $REQUIRED_AUTOMAKE_VERSION \
     "http://ftp.gnu.org/pub/gnu/automake/automake-$REQUIRED_AUTOMAKE_VERSION.tar.gz" || DIE=1
 ACLOCAL=`echo $AUTOMAKE | sed s/automake/aclocal/`
 
+# We need to do this for the craaaaaaazy mkinstalldirs usage of glib-gettext
+AUTOMAKE_VERSION=`echo $AUTOMAKE | sed s/automake-//`
+ACLOCAL_DIR=`$ACLOCAL --print-ac-dir`
+AUTOMAKE_DIR=`echo $ACLOCAL_DIR | sed s/aclocal/automake-$AUTOMAKE_VERSION/`
+
 if $want_libtool; then
     version_check libtool LIBTOOLIZE libtoolize $REQUIRED_LIBTOOL_VERSION \
         "http://ftp.gnu.org/pub/gnu/libtool/libtool-$REQUIRED_LIBTOOL_VERSION.tar.gz" || DIE=1
@@ -347,6 +352,11 @@ for configure_ac in $configure_files; do
 	if grep "^AM_GLIB_GNU_GETTEXT" $basename >/dev/null; then
 	    printbold "Running $GLIB_GETTEXTIZE... Ignore non-fatal messages."
 	    echo "no" | $GLIB_GETTEXTIZE --force --copy || exit 1
+	    # This is to copy in mkinstalldirs for glib-gettext
+	    if [ -x $AUTOMAKE_DIR/mkinstalldirs ]; then
+		echo "  copying mkinstalldirs... "
+		cp -f $AUTOMAKE_DIR/mkinstalldirs $dirname
+	    fi
 	elif grep "^AM_GNU_GETTEXT" $basename >/dev/null; then
 	   if grep "^AM_GNU_GETTEXT_VERSION" $basename > /dev/null; then
 	   	printbold "Running autopoint..."
