@@ -1,3 +1,11 @@
+2004-06-10  Rodney Dawes  <dobey@ximian.com>
+
+	* macros2/gnome-autogen.sh: Add code to check for mkinstalldirs in
+	the shared automake files directory, and copy it in if we are using
+	AM_GLIB_GNU_GETTEXT
+
+	Fixes #144069
+
 2004-05-26  James Henstridge  <james@daa.com.au>
 
 	* macros2/gnome-compiler-warnings.m4: some small cleanups.
